<resources>
    <string name="app_name">smartrack</string>

    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id" translatable="false">773097650416-vt4eu0td1pj5hupugu3h208dpplit85l.apps.googleusercontent.com</string>
    <string name="password">Password</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="sign_up">sign up</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="supplier">supplier</string>
    <string name="driver">driver</string>
    <string name="logo_icon">logo icon</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="wellcome_to_smartrack">Wellcome To smartrack</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign up</string>
    <string name="addimage">addImage</string>
    <string name="netanya">Netanya</string>
    <string name="vertices">Vertices</string>
    <string name="_3450">3450</string>
    <string name="_5">5</string>
    <string name="hertzel_36">hertzel_36</string>
    <string name="open_nav">open nav </string>
    <string name="close_nav">close nav</string>
    <string name="bar_livni">Bar Livni</string>
    <string name="barlivin_gmail_com">barlivin@gmail.com</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_serial_number">Item Serial Number</string>
    <string name="location_verex_id">Location (Verex Id)</string>
    <string name="value">Value</string>
    <string name="weight">Weight</string>
    <string name="vertex_id">vertexId</string>
    <string name="option">option</string>
    <string name="car">car</string>
    <string name="smartrack">SMARTRACK</string>
    <string name="connect_your_way">Connect Your Way</string>
    <string name="road_plan">Road Plan</string>
    <string name="supplier_options">Supplier Options</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="car_icon">car icon</string>
    <string name="option_icon">option icon</string>
    <string name="setting_icon">setting icon</string>
    <string name="share_icon">share icon</string>
    <string name="rate_icon">rate icon</string>
    <string name="logout_icon">logout icon</string>
    <string name="start_drive">start drive</string>
    <string name="max_weight">Max Weight</string>
    <string name="start">Start</string>
    <string name="end">End</string>


</resources>