<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.AddVertex">


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#831a85"
        android:padding="10dp"
        android:text="@string/vertices"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse" />

    <androidx.cardview.widget.CardView
        android:id="@+id/viewCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/netanya"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewCity"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/hertzel_36"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textViewNumberItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewAddress"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="#831a85"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/_5"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewNumberItem"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/_3450"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewAdd"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="4dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="20dp"
                android:src="@drawable/add_icon"
                android:contentDescription="@string/addimage" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>