<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginPage">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_icon"
            android:src="@drawable/logo"></ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/wellcome_to_smartrack"
            android:textColor="@color/logoPurple"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@drawable/edit"
            android:drawableStart="@drawable/person_icon"
            android:drawablePadding="10dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/logoPurple"></EditText>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/edit"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/logoPurple"></EditText>

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/logoYellow"></Button>

        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:padding="15dp"
            android:text="@string/dont_have_an_account_sign_up"
            android:textColor="@color/logoPurple"
            android:textSize="15sp"></TextView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>